--- a/index.html
+++ b/index.html
@@ -2,15 +2,95 @@
 <html lang="en">
 
 <head>
+    <title>Le Scone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Le Scone</title>
+    <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|PT+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <p>Testando Vinhadooooo</p>
+    <main class="container intro">
+        <div class="grid-5">
+            <img src="assets/lescone.png" alt="Le scone" class="logo" />
+            <div class="intro-info">
+                <p>De Seg. à Sab. <span class="aberto"></span>
+                    <br>das 07:00h às 18:00h</p>
+                <p>Praia de Botafogo, 300<br>Rio de Janeiro - RJ</p>
+            </div>
+            <p class="intro-telefone">+55 021 2412-3333</p>
+        </div>
+        <div class="grid-7">
+            <img class="intro-foto" src="assets/foto.png" alt="Foto de Le Scone" />
+        </div>
+    </main>
+    <section class="container menu">
+        <h1 class="grid-4 titulo">Menu</h1>
+        <div class="grid-7 offset-1">
+            <div class="menu-item">
+                <img src="assets/prato-1.png" alt="Foto Prato 1" />
+                <h2>Entradas</h2>
+                <ul>
+                    <li><span>R$1,70</span>Ovos Mexidos</li>
+                    <li><span>R$2,70</span>Scones de Frutas</li>
+                    <li><span>R$3,70</span>Joelho de Queijo</li>
+                    <li><span>R$4,70</span>Presunto Cozido</li>
+                    <li><span>R$3,70</span>Coxinha de Frango</li>
+                </ul>
+            </div>
+            <div class="menu-item">
+                <img src="assets/prato-2.png" alt="Foto Prato 2" />
+                <h2>Pratos Principais</h2>
+                <ul>
+                    <li><span>R$18,70</span>Penne com Queijo</li>
+                    <li><span>R$25,70</span>Feijoada</li>
+                    <li><span>R$33,70</span>Costela ao Molho</li>
+                    <li><span>R$15,70</span>Medalhão de Frango</li>
+                    <li><span>R$13,70</span>Coxinha de Frango</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="container contato">
+        <h1 class="grid-4">Contato</h1>
+        <div class="grid-7 offset-1">
+            <form action="">
+                <label for="nome">Nome</label>
+                <input type="text">
+                <div class="row">
+                    <div class="grid-7">
+                        <label for="email">Email</label>
+                        <input type="text">
+                    </div>
+                    <div class="grid-5">
+                        <label for="telefone">Telefone</label>
+                        <input type="text">
+                    </div>
+                </div>
+                <label for="msg">Mensagem</label>
+                <textarea></textarea>
+                <input class="button" type="button" value="Enviar">
+            </form>
+            <div class="contato-info">
+                <p>contato@lescone.com ////</p>
+                <p>+55 021 2412-3333 ////</p>
+            </div>
+            <a href="#" class="contato-mapa">
+                <img src="assets/map.png" alt="Como chegar em Le Scone">
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Le Scone © 1989 - 2016. Alguns direitos reservados.</p>
+            <a href="#">
+                <img src="assets/lescone-icone.png" alt="Le Scone Icone">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
