--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|PT+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -54,9 +55,9 @@
     </section>
 
     <section class="container contato">
-        <h1 class="grid-4">Contato</h1>
+        <h1 class="grid-4 titulo">Contato</h1>
         <div class="grid-7 offset-1">
-            <form action="">
+            <form>
                 <label for="nome">Nome</label>
                 <input type="text">
                 <div class="row">
